# edcb-tools

./: .gitignore  Cargo.toml  README.md  flake.nix
.agents/skills/cli/: SKILL.md
.agents/skills/cli/agents/: openai.yaml
.agents/skills/edcb-tools/: SKILL.md
docs/superpowers/plans/: 2026-06-29-reservation-get-delete.md  2026-06-29-timetable-command.md
src/: cli.rs  client.rs  codec.rs  error.rs  flows.rs  lib.rs  mcp.rs  test_support.rs  types.rs  util.rs
tests/: cli.rs  client_tcp.rs  mcp_server.rs  reservation.rs
