[package]
name = "edcb-mcp"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Rust EDCB CtrlCmd client library"

[lib]
name = "edcb_mcp"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
encoding_rs = "0.8"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
