[package]
name = "edcb-mcp"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Rust EDCB CtrlCmd client library, CLI, and MCP server"

[lib]
name = "edcb_mcp"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
encoding_rs = "0.8"
rmcp = { version = "1.8", features = ["client", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
